Adding new font to site

--- a/style.css
+++ b/style.css
@@ -1,8 +1,10 @@
 body, html {
   height: 100%;
   background-image: url("http://blog.hostbaby.com/wp-content/uploads/2013/07/scuffedstatic_dark_1920x1234.jpg");
+  font-family: 'Fjalla One', sans-serif;
 }
 
 .aboutMeCard{
   background-image: url("http://blog.hostbaby.com/wp-content/uploads/2013/07/scuffedstatic_dark_1920x1234.jpg");
+  font-family: 'Fjalla One', sans-serif;
 }
