made font larger

--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body, html {
   height: 100%;
   background-image: url("http://blog.hostbaby.com/wp-content/uploads/2013/07/scuffedstatic_dark_1920x1234.jpg");
   font-family: 'Fjalla One', sans-serif;
+  font-size: larger;
 }
 
 .aboutMeCard{
